# slack-alarm-app

./: README.md  pyproject.toml
src/: slack_app.py
