[tool.poetry]
name = "slack-alarm-app"
version = "0.1.0"
description = ""
authors = ["kei-600th <kei19941005@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11.3"
slack-bolt = "1.18.0"
python-dotenv = "^1.0.0"
APScheduler = "^3.10.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
